--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
       src="https://kit.fontawesome.com/5b3ec8f3fd.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link
+    href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/normalize.css">
     <title>Lawyer agency</title>
   </head>
   <body>
@@ -16,23 +20,27 @@
     <header class="header">
       <div class="header__top">
         <div class="container">
-          <a href="#">+38 (096) 309 21 45</a>
-          <a href="#">layout585@gmail.com </a>
-          <a href="#">Бесплатная консультация</a>
+          <a class="header__phone" href="tel:380963092145"
+            >+38 (096) 309 21 45</a
+          >
+          <a class="header__email" href="#">layout585@gmail.com </a>
+          <a class="header__btn" href="#">Бесплатная консультация</a>
         </div>
       </div>
       <div class="header__content">
-        <div class="header__logo">
-          <a href="#"><img src="assets/img/LOGOTYPE.png" alt="logotype" /></a>
-        </div>
-        <nav class="menu">
+        <div class="container">
+          <div class="header__logo">
+            <a href="#"><img src="assets/img/LOGOTYPE.png" alt="logotype" /></a>
+          </div>
+          <nav class="menu">
             <ul>
-                <li><a href="#">Главное</a></li>
-                <li><a href="#">О компании</a></li>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Контакты</a></li>
+              <li><a href="#">Главное</a></li>
+              <li><a href="#">О компании</a></li>
+              <li><a href="#">Услуги</a></li>
+              <li><a href="#">Контакты</a></li>
             </ul>
-        </nav>
+          </nav>
+        </div>
       </div>
     </header>
   </body>
